@@ -16,261 +16,212 @@
 
 package com.android.settings.accessibility;
 
+import static com.android.internal.accessibility.AccessibilityShortcutController.COLOR_INVERSION_COMPONENT_NAME;
 import static com.android.settings.accessibility.AccessibilityUtil.State.OFF;
 import static com.android.settings.accessibility.AccessibilityUtil.State.ON;
-import static com.android.settings.accessibility.ToggleColorInversionPreferenceFragment.KEY_SHORTCUT_PREFERENCE;
-import static com.android.settings.accessibility.ToggleColorInversionPreferenceFragment.KEY_SWITCH_PREFERENCE;
 
 import static com.google.common.truth.Truth.assertThat;
-
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.when;
 
 import android.app.settings.SettingsEnums;
 import android.content.ComponentName;
 import android.content.Context;
-import android.content.res.Resources;
-import android.os.Bundle;
-import android.platform.test.annotations.DisableFlags;
-import android.platform.test.annotations.EnableFlags;
-import android.platform.test.flag.junit.SetFlagsRule;
+import android.platform.test.annotations.RequiresFlagsDisabled;
+import android.platform.test.annotations.RequiresFlagsEnabled;
+import android.platform.test.flag.junit.CheckFlagsRule;
+import android.platform.test.flag.junit.DeviceFlagsValueProvider;
+import android.provider.SearchIndexableResource;
 import android.provider.Settings;
-import android.view.LayoutInflater;
-import android.view.View;
-import android.view.ViewGroup;
-import android.widget.PopupWindow;
 
-import androidx.fragment.app.FragmentActivity;
-import androidx.preference.PreferenceManager;
-import androidx.preference.PreferenceScreen;
+import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
+import androidx.fragment.app.FragmentFactory;
+import androidx.fragment.app.testing.FragmentScenario;
+import androidx.lifecycle.Lifecycle;
+import androidx.preference.TwoStatePreference;
 import androidx.test.core.app.ApplicationProvider;
 
 import com.android.settings.R;
-import com.android.settings.testutils.XmlTestUtils;
-import com.android.settings.testutils.shadow.ShadowFragment;
-import com.android.settings.widget.SettingsMainSwitchPreference;
-import com.android.settingslib.search.SearchIndexableRaw;
+import com.android.settings.testutils.SettingsStoreRule;
 
-import org.junit.Before;
+import org.junit.After;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.Answers;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.robolectric.RobolectricTestRunner;
-import org.robolectric.annotation.Config;
-import org.robolectric.shadow.api.Shadow;
-import org.robolectric.shadows.ShadowApplication;
+import org.robolectric.shadows.ShadowLooper;
 
-import java.util.ArrayList;
 import java.util.List;
 
 /** Tests for {@link ToggleColorInversionPreferenceFragment} */
 @RunWith(RobolectricTestRunner.class)
-@Config(shadows = ShadowFragment.class)
-public class ToggleColorInversionPreferenceFragmentTest {
+public class ToggleColorInversionPreferenceFragmentTest extends
+        BaseShortcutInteractionsTestCases<ToggleColorInversionPreferenceFragment> {
+
     @Rule
-    public final SetFlagsRule mSetFlagsRule = new SetFlagsRule();
+    public final CheckFlagsRule mCheckFlagsRule = DeviceFlagsValueProvider.createCheckFlagsRule();
+    @Rule
+    public final SettingsStoreRule mSettingsStoreRule = new SettingsStoreRule();
+    private static final String MAIN_SWITCH_PREF_KEY = "accessibility_display_inversion_enabled";
+    private static final String SHORTCUT_PREF_KEY = "color_inversion_shortcut_key";
     private final Context mContext = ApplicationProvider.getApplicationContext();
-    private TestToggleColorInversionPreferenceFragment mFragment;
-    private PreferenceScreen mScreen;
-    private SettingsMainSwitchPreference mSwitchPreference;
+    private FragmentScenario<ToggleColorInversionPreferenceFragment> mFragScenario = null;
+    private ToggleColorInversionPreferenceFragment mFragment;
 
-    @Mock(answer = Answers.RETURNS_DEEP_STUBS)
-    private PreferenceManager mPreferenceManager;
-    @Mock
-    private FragmentActivity mActivity;
-    @Mock
-    private Resources mResources;
-
-    @Before
-    public void setUpTestFragment() {
-        MockitoAnnotations.initMocks(this);
-
-        mFragment = spy(new TestToggleColorInversionPreferenceFragment(mContext));
-        when(mFragment.getPreferenceManager()).thenReturn(mPreferenceManager);
-        when(mFragment.getPreferenceManager().getContext()).thenReturn(mContext);
-        when(mFragment.getContext()).thenReturn(mContext);
-        when(mFragment.getActivity()).thenReturn(mActivity);
-        when(mActivity.getContentResolver()).thenReturn(mContext.getContentResolver());
-        when(mActivity.getResources()).thenReturn(mResources);
-
-        mScreen = spy(new PreferenceScreen(mContext, /* attrs= */ null));
-        when(mScreen.findPreference(mFragment.getUseServicePreferenceKey()))
-                .thenReturn(mFragment.mToggleServiceSwitchPreference);
-        doReturn(mScreen).when(mFragment).getPreferenceScreen();
-        mSwitchPreference = mScreen.findPreference(mFragment.getUseServicePreferenceKey());
+    @After
+    public void cleanUp() {
+        if (mFragScenario != null) {
+            mFragScenario.close();
+        }
     }
 
     @Test
-    public void onResume_colorCorrectEnabled_shouldReturnTrue() {
+    public void onResume_colorInversionEnabled_shouldReturnTrue() {
         Settings.Secure.putInt(mContext.getContentResolver(),
                 Settings.Secure.ACCESSIBILITY_DISPLAY_INVERSION_ENABLED, ON);
-        mFragment.onAttach(mContext);
-        mFragment.onCreate(Bundle.EMPTY);
 
-        mFragment.onResume();
+        launchFragment();
 
-        assertThat(mSwitchPreference.isChecked()).isTrue();
+        assertThat(getMainSwitch().isChecked()).isTrue();
     }
 
     @Test
-    public void onResume_colorCorrectDisabled_shouldReturnFalse() {
+    public void onResume_colorInversionDisabled_shouldReturnFalse() {
         Settings.Secure.putInt(mContext.getContentResolver(),
                 Settings.Secure.ACCESSIBILITY_DISPLAY_INVERSION_ENABLED, OFF);
-        mFragment.onAttach(mContext);
-        mFragment.onCreate(Bundle.EMPTY);
 
-        mFragment.onResume();
+        launchFragment();
 
-        assertThat(mSwitchPreference.isChecked()).isFalse();
+        assertThat(getMainSwitch().isChecked()).isFalse();
     }
 
     @Test
-    public void onResume_colorCorrectEnabled_switchPreferenceChecked_notShowTooltips() {
+    public void turnOffMainSwitch_colorInversionTurnedOff() {
         Settings.Secure.putInt(mContext.getContentResolver(),
                 Settings.Secure.ACCESSIBILITY_DISPLAY_INVERSION_ENABLED, ON);
-        mSwitchPreference.setChecked(true);
-        mFragment.onAttach(mContext);
-        mFragment.onCreate(Bundle.EMPTY);
+        launchFragment();
+        assertThat(getMainSwitch().isChecked()).isTrue();
 
-        mFragment.onResume();
+        getMainSwitch().performClick();
+        ShadowLooper.idleMainLooper();
 
-        assertThat(getLatestPopupWindow()).isNull();
-    }
-
-    @Test
-    public void onPreferenceToggled_colorCorrectEnabled_shouldReturnFalseAndNotShowTooltipView() {
-        Settings.Secure.putInt(mContext.getContentResolver(),
-                Settings.Secure.ACCESSIBILITY_DISPLAY_INVERSION_ENABLED, ON);
-        mSwitchPreference.setChecked(true);
-        mFragment.onAttach(mContext);
-        mFragment.onCreate(Bundle.EMPTY);
-
-        mFragment.onPreferenceToggled(mSwitchPreference.getKey(), false);
-
+        assertThat(getMainSwitch().isChecked()).isFalse();
         final boolean isEnabled = Settings.Secure.getInt(mContext.getContentResolver(),
                 Settings.Secure.ACCESSIBILITY_DISPLAY_INVERSION_ENABLED, OFF) == ON;
         assertThat(isEnabled).isFalse();
-        assertThat(getLatestPopupWindow()).isNull();
+    }
+
+    @Test
+    public void turnOnMainSwitch_colorInversionTurnedOn() {
+        Settings.Secure.putInt(mContext.getContentResolver(),
+                Settings.Secure.ACCESSIBILITY_DISPLAY_INVERSION_ENABLED, OFF);
+        launchFragment();
+        assertThat(getMainSwitch().isChecked()).isFalse();
+
+        getMainSwitch().performClick();
+        ShadowLooper.idleMainLooper();
+
+        assertThat(getMainSwitch().isChecked()).isTrue();
+        final boolean isEnabled = Settings.Secure.getInt(mContext.getContentResolver(),
+                Settings.Secure.ACCESSIBILITY_DISPLAY_INVERSION_ENABLED, OFF) == ON;
+        assertThat(isEnabled).isTrue();
     }
 
     @Test
     public void getMetricsCategory_returnsCorrectCategory() {
+        launchFragment();
+
         assertThat(mFragment.getMetricsCategory()).isEqualTo(
                 SettingsEnums.ACCESSIBILITY_COLOR_INVERSION_SETTINGS);
     }
 
     @Test
     public void getPreferenceScreenResId_returnsCorrectXml() {
+        launchFragment();
+
         assertThat(mFragment.getPreferenceScreenResId()).isEqualTo(
                 R.xml.accessibility_color_inversion_settings);
     }
 
     @Test
     public void getHelpResource_returnsCorrectHelpResource() {
+        launchFragment();
+
         assertThat(mFragment.getHelpResource()).isEqualTo(R.string.help_url_color_inversion);
     }
 
+    @RequiresFlagsDisabled({
+            Flags.FLAG_CATALYST_COLOR_INVERSION,
+            com.android.settings.flags.Flags.FLAG_CATALYST_SETTINGS_SEARCH
+    })
     @Test
-    public void getNonIndexableKeys_existInXmlLayout() {
+    public void getNonIndexableKeys_containsNonIndexableItems() {
         final List<String> niks = ToggleColorInversionPreferenceFragment.SEARCH_INDEX_DATA_PROVIDER
                 .getNonIndexableKeys(mContext);
-        final List<String> keys =
-                XmlTestUtils.getKeysFromPreferenceXml(mContext,
-                        R.xml.accessibility_color_inversion_settings);
+        final List<String> keys = List.of(
+                "top_intro",
+                "animated_image",
+                "general_categories",
+                "html_description",
+                "feedback"
+        );
 
-        assertThat(keys).containsAtLeastElementsIn(niks);
+        assertThat(niks).containsExactlyElementsIn(keys);
     }
 
+    @RequiresFlagsDisabled({
+            Flags.FLAG_CATALYST_COLOR_INVERSION,
+            com.android.settings.flags.Flags.FLAG_CATALYST_SETTINGS_SEARCH
+    })
     @Test
-    @DisableFlags(Flags.FLAG_FIX_A11Y_SETTINGS_SEARCH)
-    public void getRawDataToIndex_flagOff_returnShortcutIndexablePreferences() {
-        List<SearchIndexableRaw> rawData = ToggleColorInversionPreferenceFragment
-                .SEARCH_INDEX_DATA_PROVIDER.getRawDataToIndex(mContext, /* enabled= */ true);
+    public void getXmlResourceToIndex() {
+        final List<SearchIndexableResource> indexableResources =
+                ToggleColorInversionPreferenceFragment.SEARCH_INDEX_DATA_PROVIDER
+                        .getXmlResourcesToIndex(mContext, true);
 
-        assertThat(rawData).hasSize(1);
-        assertThat(rawData.get(0).key).isEqualTo(KEY_SHORTCUT_PREFERENCE);
-        assertThat(rawData.get(0).title).isEqualTo(mContext.getString(
-                R.string.accessibility_display_inversion_shortcut_title));
-
+        assertThat(indexableResources).isNotNull();
+        assertThat(indexableResources.size()).isEqualTo(1);
+        assertThat(indexableResources.getFirst().xmlResId).isEqualTo(
+                R.xml.accessibility_color_inversion_settings);
     }
 
+    @RequiresFlagsEnabled({
+            Flags.FLAG_CATALYST_COLOR_INVERSION,
+            com.android.settings.flags.Flags.FLAG_CATALYST_SETTINGS_SEARCH
+    })
     @Test
-    @EnableFlags(Flags.FLAG_FIX_A11Y_SETTINGS_SEARCH)
-    public void getRawDataToIndex_flagOn_returnAllIndexablePreferences() {
-        String[] expectedKeys = {KEY_SHORTCUT_PREFERENCE, KEY_SWITCH_PREFERENCE};
-        String[] expectedTitles = {
-                mContext.getString(R.string.accessibility_display_inversion_shortcut_title),
-                mContext.getString(R.string.accessibility_display_inversion_switch_title)};
-        List<String> keysResultList = new ArrayList<>();
-        List<String> titlesResultList = new ArrayList<>();
-        List<SearchIndexableRaw> rawData = ToggleColorInversionPreferenceFragment
-                .SEARCH_INDEX_DATA_PROVIDER.getRawDataToIndex(mContext, /* enabled= */ true);
+    public void getXmlResourceToIndex_catalystSearch() {
+        final List<SearchIndexableResource> indexableResources =
+                ToggleColorInversionPreferenceFragment.SEARCH_INDEX_DATA_PROVIDER
+                        .getXmlResourcesToIndex(mContext, true);
 
-        for (SearchIndexableRaw rawDataItem : rawData) {
-            keysResultList.add(rawDataItem.key);
-            titlesResultList.add(rawDataItem.title);
-        }
-
-        assertThat(rawData).hasSize(2);
-        assertThat(keysResultList).containsExactly(expectedKeys);
-        assertThat(titlesResultList).containsExactly(expectedTitles);
+        assertThat(indexableResources).isNull();
     }
 
-    private static PopupWindow getLatestPopupWindow() {
-        final ShadowApplication shadowApplication =
-                Shadow.extract(ApplicationProvider.getApplicationContext());
-        return shadowApplication.getLatestPopupWindow();
+    private TwoStatePreference getMainSwitch() {
+        return mFragment.findPreference(MAIN_SWITCH_PREF_KEY);
     }
 
-    private static class TestToggleColorInversionPreferenceFragment extends
-            ToggleColorInversionPreferenceFragment {
-        private static final String PLACEHOLDER_PACKAGE_NAME = "com.placeholder.example";
-        private static final String PLACEHOLDER_CLASS_NAME =
-                PLACEHOLDER_PACKAGE_NAME + ".placeholder";
-        private static final ComponentName PLACEHOLDER_COMPONENT_NAME = new ComponentName(
-                PLACEHOLDER_PACKAGE_NAME, PLACEHOLDER_CLASS_NAME);
-        private static final String PLACEHOLDER_TILE_TOOLTIP_CONTENT =
-                PLACEHOLDER_PACKAGE_NAME + "tooltip_content";
+    @NonNull
+    @Override
+    public ComponentName getFeatureComponent() {
+        return COLOR_INVERSION_COMPONENT_NAME;
+    }
 
-        TestToggleColorInversionPreferenceFragment(Context context) {
-            super();
-            mComponentName = PLACEHOLDER_COMPONENT_NAME;
-            final SettingsMainSwitchPreference switchPreference =
-                    new SettingsMainSwitchPreference(context);
-            switchPreference.setKey(getUseServicePreferenceKey());
-            mToggleServiceSwitchPreference = switchPreference;
-            setArguments(new Bundle());
-        }
+    @Nullable
+    @Override
+    public ShortcutPreference getShortcutToggle() {
+        return mFragment.findPreference(SHORTCUT_PREF_KEY);
+    }
 
-        @Override
-        public void onViewCreated(View view, Bundle savedInstanceState) {
-            // do nothing
-        }
-
-        @Override
-        public View onCreateView(LayoutInflater inflater, ViewGroup container,
-                Bundle savedInstanceState) {
-            return mock(View.class);
-        }
-
-        @Override
-        protected void updateShortcutPreference() {
-            // UI related function, do nothing in tests
-        }
-
-        @Override
-        ComponentName getTileComponentName() {
-            return PLACEHOLDER_COMPONENT_NAME;
-        }
-
-        @Override
-        public View getView() {
-            return mock(View.class);
-        }
+    @NonNull
+    @Override
+    public ToggleColorInversionPreferenceFragment launchFragment() {
+        mFragScenario = FragmentScenario.launch(
+                ToggleColorInversionPreferenceFragment.class,
+                /* fragmentArgs= */ null,
+                androidx.appcompat.R.style.Theme_AppCompat,
+                (FragmentFactory) null).moveToState(Lifecycle.State.RESUMED);
+        mFragScenario.onFragment(frag -> mFragment = frag);
+        return mFragment;
     }
 }
